--- a/views/results.erb
+++ b/views/results.erb
@@ -6,4 +6,8 @@
 
 <h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
 
+<% letter = '' %>
+<% number_of_times_used = '' %>
+
+
 <h2>Most Common Letter: _____ used _____ times</h2>
