--- a/views/results.erb
+++ b/views/results.erb
@@ -9,5 +9,9 @@
 <% letter = '' %>
 <% number_of_times_used = '' %>
 
+<% @analyzed_text.most_used_letter.each do |key, value| %>
+  <% letter += key %>
+  <% number_of_times_used += value.to_s %>
+  <% end %>
 
 <h2>Most Common Letter: _____ used _____ times</h2>
