--- a/views/results.erb
+++ b/views/results.erb
@@ -13,5 +13,6 @@
   <% letter += key %>
   <% number_of_times_used += value.to_s %>
   <% end %>
+  <% binding.pry%>
 
 <h2>Most Common Letter: <%= letter %> used <%= number_of_times_used %> times</h2>
