--- a/views/results.erb
+++ b/views/results.erb
@@ -14,4 +14,4 @@
   <% number_of_times_used += value.to_s %>
   <% end %>
 
-<h2>Most Common Letter: <%= letter.capitalize %> used <%= number_of_times_used %> times</h2>
+<h2>Most Common Letter: <%= letter.capitalize %>, used <%= number_of_times_used %> times</h2>
